llvm-toolchain-snapshot (1:5.0~svn302368-1~exp1) experimental; urgency=medium

  * Only enable libfuzzer for Linux kernel.
    Thanks to Pino Toscano for the patch
  * Add option -DPOLLY_BUNDLED_JSONCPP=ON
    to use the system lib instead of the patch d/p/use-deb-json.diff

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 07 May 2017 12:13:43 +0200

llvm-toolchain-snapshot (1:5.0~svn298899-1) unstable; urgency=medium

  * Limit the archs where the ocaml binding is built
    Should fix the FTBFS
    Currently amd64 arm64 armel armhf i386
  * d/p/add_symbols_versioning.patch removed (applied upstream)
  * Really fix "use versioned symbols" for llvm
    Thanks to Julien Cristau for the patch (Closes: #849098)
  * Explicit the dep of clang-tidy on same version of llvm to avoid
    undefined symbols
  * Add override_dh_makeshlibs for the libllvm or liblldb versions
    Thanks to Julien Cristau for the patch
  * change the min version of the libclang1 symbols to 1:4.0-3~
  * Fix the symlink on scan-build-py
  * add libncurses in the list of build deps (Closes: #861170)

  [ Rebecca N. Palmer ]
  * Use versioned symbols (Closes: #848368)

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 09 Apr 2017 10:11:56 +0200

llvm-toolchain-snapshot (1:5.0~svn294583-1~exp1) experimental; urgency=medium

  * New snapshot release
  * New library liblldb-intel-mpxtable.so
  * Fix the incorrect symlink to scan-build-py (Closes: #856869)
  * Explicit the dep of clang-format on same version of llvm to avoid
    undefined symbols

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 16 Jan 2017 09:03:48 +0100

llvm-toolchain-snapshot (1:5.0~svn292017-1~exp1) experimental; urgency=medium

  * New snapshot release
    snapshot is now 5.0
  * d/p/silent-amdgpu-test-failing.diff silent amdgpu tests failing
    (see upstream bug 31610)
  * d/p/lldb-server-link-issue.patch removed, merged upstream
  * Also install python-lldb-5.0 when installing lldb-5.0 (Closes: #851171)